rcdir = $(prefix)/share/gloobus/gtkrc

dist_rc_DATA = \
	customgtk.rc \
	scrollbar-horiz.png \
	scrollbar-horiz-prelight.png \
	scrollbar-horiz-trough.png \
	scrollbar-vert.png \
	scrollbar-vert-prelight.png \
	scrollbar-vert-trough.png \
	slider.png \
	slider-trough.png \
	slider-trough-filled.png \
	stepper-down.png \
	stepper-down-insensitive.png \
	stepper-left.png \
	stepper-left-insensitive.png \
	stepper-right.png \
	stepper-right-insensitive.png \
	stepper-up.png \
	stepper-up-insensitive.png
