
bcdir = $(prefix)/share/gloobus

dist_bc_DATA = \
	cover-missing.svg \
	document-open.svg\
	edit-delete.svg \
	gloobus-menu.svg \
	go-next.svg \
	go-previous.svg \
	media-pause.svg \
	media-play.svg \
	view-fullscreen.svg \
	view-restore.svg \
	window-close.svg \
	floating-bar.svg \
	floating-bar.png \
    font-install.svg 

